# Calculator

./: .gitignore  App.cpp  App.h  Associativity.h  CMakeLists.txt  CMakeSettings.json  CalculationMessage.cpp  CalculationMessage.h  DllCatalogue.cpp  DllCatalogue.h  Expression.cpp  Expression.h  Func.cpp  Func.h  Funcs.cpp  Funcs.h  Precedence.h  README.md  Source.cpp  StringUtils.cpp  StringUtils.h  Tokens.cpp  Tokens.h
plugins/: not_a_library.txt
